--- a/ahaley.Workfront/ahaley.Workfront.csproj
+++ b/ahaley.Workfront/ahaley.Workfront.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ahaley.Workfront</RootNamespace>
     <AssemblyName>ahaley.Workfront</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocumentDownload.cs" />
+    <Compile Include="Models\DocumentFolder.cs" />
+    <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\Issue.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\WorkfrontResource.cs" />
     <Compile Include="Utilities\FilterBuilder.cs" />
     <Compile Include="HttpResponseMessageExtensions.cs" />
     <Compile Include="Models\Document.cs" />
@@ -49,7 +57,7 @@
     <Compile Include="Models\Note.cs" />
     <Compile Include="Models\Payroll.cs" />
     <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\Task.cs" />
+    <Compile Include="Models\WorkfrontTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultResponse.cs" />
     <Compile Include="Utilities\WorkfrontDateConverter.cs" />
@@ -61,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.1</Version>
+      <Version>11.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
